fixed alignment of the flag and hamburger added 2px to the Navbar logo

--- a/NavBar.css
+++ b/NavBar.css
@@ -24,13 +24,18 @@ body {
 
 .nav-left {
     display: flex;
-    align-items: center;
+    justify-content: center;
     gap: 1rem;
+    height: 2rem;
+    margin: 0;
 }
 
 .Logo {
     text-decoration: none;
     color: lightskyblue;
+    font-size: 1rem;
+    margin-top: 2px;
+    padding: 0;
 }
 
 .AmericanFlag img {
